--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 20px auto;
         }
     </style>
-</head>
+</head><script type='text/javascript' src='//pl27399618.profitableratecpm.com/00/a1/86/00a186be63cb3ca605eb2adf41051631.js'></script>
 <body>
     <h1>Selamat Datang di FC Mobile Review</h1>
     <p>Kirim nickname kamu via WhatsApp untuk direview live di TikTok!</p>
